unpackaged/main/default/objects/Account/fields/AKA_Name__c.field-meta.xml
<CustomField>
    <fullName>AKA_Name__c</fullName>
    <label>AKA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>