unpackaged/main/default/objects/Account/fields/Area_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Expertise__c</fullName>
    <description>Demo field for SME project</description>
    <label>Area of Expertise</label>
    <type>TextArea</type>
</CustomField>