unpackaged/main/default/objects/Account/fields/Date_of_Birth_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Text__c</fullName>
    <label>Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>