unpackaged/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Partner Team</fullName>
            </value>
            <value>
                <fullName>Solution Architecture</fullName>
            </value>
            <value>
                <fullName>Implementation Consulting</fullName>
            </value>
            <value>
                <fullName>LSAP</fullName>
            </value>
            <value>
                <fullName>Support Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>