unpackaged/main/default/objects/Account/fields/IsMinor__c.field-meta.xml
<CustomField>
    <fullName>IsMinor__c</fullName>
    <formula>IF(AND(

NOT(ISBLANK(litify_pm__Date_of_birth__c)), litify_pm__lit_Calculated_Age__c &lt; 18),

True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMinor</label>
    <type>Checkbox</type>
</CustomField>