unpackaged/main/default/objects/Account/fields/litify_pm__Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Date_of_birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>