unpackaged/main/default/objects/Account/fields/litify_pm__Email__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>