unpackaged/main/default/objects/Account/fields/litify_pm__Last_Called_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Last_Called_At__c</fullName>
    <label>Last Called At</label>
    <type>DateTime</type>
</CustomField>