unpackaged/main/default/objects/Account/fields/litify_pm__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>