unpackaged/main/default/objects/Account/fields/litify_pm__lit_Billing_County__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Billing_County__c</fullName>
    <label>Billing County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>