unpackaged/main/default/objects/Account/fields/litify_pm__lit_Has_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Has_Birthdate__c</fullName>
    <formula>NOT(ISNULL(litify_pm__Date_of_birth__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Birthdate</label>
    <type>Checkbox</type>
</CustomField>