unpackaged/main/default/objects/Account/fields/litify_pm__lit_Is_Deceased__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Is_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deceased</label>
    <type>Checkbox</type>
</CustomField>