unpackaged/main/default/objects/Account/fields/litify_pm__Phone_Home__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Phone_Home__c</fullName>
    <label>Phone Home</label>
    <type>Phone</type>
</CustomField>