unpackaged/main/default/objects/Account/fields/litify_pm__Phone_Mobile__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Phone_Mobile__c</fullName>
    <label>Phone Mobile</label>
    <type>Phone</type>
</CustomField>