unpackaged/main/default/objects/Account/fields/litify_pm__Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Phone_Other__c</fullName>
    <label>Phone Other</label>
    <type>Phone</type>
</CustomField>