unpackaged/main/default/objects/Account/fields/litify_pm__Phone_Work__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Phone_Work__c</fullName>
    <label>Phone Work</label>
    <type>Phone</type>
</CustomField>