unpackaged/main/default/objects/Account/fields/litify_pm__Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Social_Security_Number__c</fullName>
    <label>Social Security Number</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>