unpackaged/main/default/objects/Account/fields/litify_pm__Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>