unpackaged/main/default/objects/Account/fields/litify_pm__Vendor__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor</label>
    <type>Checkbox</type>
</CustomField>