unpackaged/main/default/objects/Account/fields/Run_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Run_Triggers__c</fullName>
    <formula>IF($Setup.litify_pm__Public_Setup__c.litify_pm__Run_Triggers__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Triggers</label>
    <type>Checkbox</type>
</CustomField>