unpackaged/main/default/objects/Account/recordTypes/litify_pm__Business.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Business</fullName>
    <active>true</active>
    <description>A business or other entity</description>
    <label>Litify Business</label>
</RecordType>