unpackaged/main/default/objects/Account/recordTypes/litify_pm__Individual.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Individual</fullName>
    <active>true</active>
    <description>A person</description>
    <label>Litify Individual</label>
</RecordType>