unpackaged/main/default/objects/Account/listViews/All_Litify_Individuals.listView-meta.xml
<ListView>
    <fullName>All_Litify_Individuals</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.litify_pm__Individual</value>
    </filters>
    <label>All Litify Individuals</label>
</ListView>